[package]
name = "adaman_vtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bevy = { version = "0.12.0", features = ["jpeg", "serialize"] }
bevy_egui = { version = "0.23.0", features = ["serde"] }
bevy_matchbox = "0.8.0"
bevy_mod_picking = { version = "0.17.0", features = ["bevy_picking_raycast", "bevy_egui", "backend_egui"] }
bincode = "1.3.3"
directories = "5.0.1"
futures-lite = "2.0.0"
general_storage = "0.3.0"
general_storage_file = "0.3.0"
general_storage_web = "0.3.0"
image = "0.24.7"
postcard = { version = "1.0.7", features = ["use-std"] }
rfd = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v1", "v8", "rng", "v6"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
